parser/tests/bad/decl01-4.st
% re-declaration of identifier 'x'

procedure p(var i: int, i: int)
  % empty
end p
